fix bug #41257 (lookupNamespaceURI does not work as expected) fix related issue in isDefaultNamespace add test reconcile namespaces when setting attribute in a new namespace

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@234964 c90b9560-bf6c-de11-be94-00142212c4b1